# mini_book_rust_backend

./: .env  .gitignore  Cargo.toml  docker-compose.yml
src/: lib.rs  main.rs
src/application/controller/: auth.rs  authors.rs  books.rs  mod.rs
src/application/service/: auth_service.rs  author_service.rs  book_service.rs  init_service_setup.rs  mod.rs
src/config/: db_config.rs  jwt_config.rs  mod.rs
src/domain/: mod.rs
src/domain/entities/: author.rs  book.rs  mod.rs  prelude.rs  user.rs
src/domain/migrator/: m20220101_000001_create_user_table.rs  m20241207_151941_create_author_table.rs  m20241207_152032_create_book_table.rs  mod.rs
src/domain/repositories/: auth_repository.rs  author_repository.rs  book_repository.rs  mod.rs  user_repository.rs
src/domain/value_object/: auth.rs  author.rs  book.rs  mod.rs
src/infrastructure/: mod.rs
src/infrastructure/db/: mod.rs  mysql_connection.rs
src/infrastructure/db/repositories/: auth_repository.rs  author_repository.rs  book_repository.rs  mod.rs
src/infrastructure/rocket_http/: mod.rs
src/infrastructure/rocket_http/jwt/: jwt_claim.rs  mod.rs
src/infrastructure/rocket_http/middleware/: cors.rs  jwt_auth.rs  mod.rs
src/infrastructure/rocket_http/response_type/: custom_response.rs
src/infrastructure/rocket_http/routes/: auth.rs  authors.rs  books.rs  init_route_setup.rs  mod.rs
