[package]
name = "udemy_mini_book"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
sea-orm = { version = "1.1.2", features = [
    "sqlx-mysql",
    "runtime-async-std-native-tls",
    "macros",
] }
sea-orm-migration = "1.1.2"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
bcrypt = "0.16.0"
